plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.4.RELEASE'
}

group 'Java_Spring_Notes'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'


// customizing version
//ext['junit-jupiter.version'] = '5.4.0'


clean {
    delete "out"
    delete "build"
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    sourceCompatibility = '13'
    targetCompatibility = '13'
}

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    compile 'com.google.guava:guava:28.0-jre'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.0'
//    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage'
        exclude group: 'org.junit.jupiter'
    }
    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
    compile group: 'com.h2database', name: 'h2', version: '1.4.200'
    // https://mvnrepository.com/artifact/com.auth0/java-jwt
    compile group: 'com.auth0', name: 'java-jwt', version: '3.9.0'

}

springBoot {
    // Spring Boot Actuator's info endpoint automatically publishes information about your build in the presence of a
    // META-INF/build-info.properties file. A buildInfo() task is provided to generate this file.
    buildInfo()
}